// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`WalletListItemSkeleton > should render wallet list skeleton when isCompact = false 1`] = `
<div>
  <table>
    <tbody
      data-testid="WalletListSkeleton"
    >
      <tr
        class=" css-16ynu5g"
        data-testid="TableRow"
      >
        <td>
          <div
            class="flex shrink-0 css-gfxyas"
          >
            <div
              class="flex items-center border-r border-theme-secondary-300 pr-3 dark:border-theme-secondary-800 h-11"
            >
              <span
                aria-busy="true"
                aria-live="polite"
                class="flex w-auto max-w-full items-center overflow-hidden leading-none"
              >
                <span
                  class="react-loading-skeleton"
                  style="width: 18px; height: 18px;"
                >
                  ‌
                </span>
                <br />
              </span>
            </div>
          </div>
        </td>
        <td>
          <div
            class="-ml-3 space-x-4 css-o5w6qc"
          >
            <span
              aria-busy="true"
              aria-live="polite"
              class="flex w-auto max-w-full items-center overflow-hidden leading-none"
            >
              <span
                class="react-loading-skeleton"
                style="width: 44px; height: 44px; border-radius: 50%;"
              >
                ‌
              </span>
              <br />
            </span>
            <span
              aria-busy="true"
              aria-live="polite"
              class="flex w-auto max-w-full items-center overflow-hidden leading-none"
            >
              <span
                class="react-loading-skeleton"
                style="width: 200px; height: 16px;"
              >
                ‌
              </span>
              <br />
            </span>
          </div>
        </td>
        <td>
          <div
            class="justify-center css-o5w6qc"
          />
        </td>
        <td>
          <div
            class="justify-end css-o5w6qc"
          >
            <span
              aria-busy="true"
              aria-live="polite"
              class="flex w-auto max-w-full items-center overflow-hidden leading-none"
            >
              <span
                class="react-loading-skeleton"
                style="width: 150px; height: 16px;"
              >
                ‌
              </span>
              <br />
            </span>
          </div>
        </td>
        <td>
          <div
            class="justify-end css-o5w6qc"
          >
            <span
              aria-busy="true"
              aria-live="polite"
              class="flex w-auto max-w-full items-center overflow-hidden leading-none"
            >
              <span
                class="react-loading-skeleton"
                style="width: 100px; height: 16px;"
              >
                ‌
              </span>
              <br />
            </span>
          </div>
        </td>
        <td>
          <div
            class="justify-end text-theme-secondary-text css-31g0sb"
          >
            <button
              class="ml-3 my-auto css-qrwjsp"
              data-testid="WalletHeader__send-button"
              disabled=""
              type="button"
            >
              <div
                class="flex items-center space-x-2"
              >
                Send
              </div>
            </button>
            <div
              class="ml-3"
              data-testid="WalletHeader__more-button"
            >
              <button
                class="w-11 flex-1 bg-theme-primary-600 text-white hover:bg-theme-primary-700 css-qrwjsp"
                disabled=""
                type="button"
              >
                <div
                  class="flex items-center space-x-2"
                >
                  <div
                    class="css-1i4b0eq"
                    height="20"
                    width="20"
                  >
                    <svg
                      id="ellipsis-vertical"
                      viewBox="0 0 20 20"
                      x="0"
                      xml:space="preserve"
                      xmlns="http://www.w3.org/2000/svg"
                      y="0"
                    >
                      <g
                        fill="none"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                      >
                        <circle
                          cx="10"
                          cy="16.994"
                          r="2.006"
                        />
                        <circle
                          cx="10"
                          cy="3"
                          r="2"
                        />
                        <circle
                          cx="10"
                          cy="10"
                          r="2"
                        />
                      </g>
                    </svg>
                  </div>
                </div>
              </button>
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`WalletListItemSkeleton > should render wallet list skeleton when isCompact = true 1`] = `
<div>
  <table>
    <tbody
      data-testid="WalletListSkeleton"
    >
      <tr
        class=" css-16ynu5g"
        data-testid="TableRow"
      >
        <td>
          <div
            class="flex shrink-0 css-f2t2np"
          >
            <div
              class="flex items-center border-r border-theme-secondary-300 pr-3 dark:border-theme-secondary-800 h-5"
            >
              <span
                aria-busy="true"
                aria-live="polite"
                class="flex w-auto max-w-full items-center overflow-hidden leading-none"
              >
                <span
                  class="react-loading-skeleton"
                  style="width: 18px; height: 18px;"
                >
                  ‌
                </span>
                <br />
              </span>
            </div>
          </div>
        </td>
        <td>
          <div
            class="-ml-3 space-x-3 css-12appi5"
          >
            <span
              aria-busy="true"
              aria-live="polite"
              class="flex w-auto max-w-full items-center overflow-hidden leading-none"
            >
              <span
                class="react-loading-skeleton"
                style="width: 20px; height: 20px; border-radius: 50%;"
              >
                ‌
              </span>
              <br />
            </span>
            <span
              aria-busy="true"
              aria-live="polite"
              class="flex w-auto max-w-full items-center overflow-hidden leading-none"
            >
              <span
                class="react-loading-skeleton"
                style="width: 200px; height: 16px;"
              >
                ‌
              </span>
              <br />
            </span>
          </div>
        </td>
        <td>
          <div
            class="justify-center css-12appi5"
          />
        </td>
        <td>
          <div
            class="justify-end css-12appi5"
          >
            <span
              aria-busy="true"
              aria-live="polite"
              class="flex w-auto max-w-full items-center overflow-hidden leading-none"
            >
              <span
                class="react-loading-skeleton"
                style="width: 150px; height: 16px;"
              >
                ‌
              </span>
              <br />
            </span>
          </div>
        </td>
        <td>
          <div
            class="justify-end css-12appi5"
          >
            <span
              aria-busy="true"
              aria-live="polite"
              class="flex w-auto max-w-full items-center overflow-hidden leading-none"
            >
              <span
                class="react-loading-skeleton"
                style="width: 100px; height: 16px;"
              >
                ‌
              </span>
              <br />
            </span>
          </div>
        </td>
        <td>
          <div
            class="justify-end text-theme-secondary-text css-opqlbz"
          >
            <button
              class="ml-3 -mr-3 text-theme-primary-600 hover:text-theme-primary-700 css-5e9bdv"
              data-testid="WalletHeader__send-button"
              disabled=""
              type="button"
            >
              <div
                class="flex items-center space-x-2"
              >
                Send
              </div>
            </button>
            <div
              class="ml-3"
              data-testid="WalletHeader__more-button"
            >
              <button
                class="w-11 -mr-1.5 text-theme-primary-300 hover:text-theme-primary-600 css-5e9bdv"
                disabled=""
                type="button"
              >
                <div
                  class="flex items-center space-x-2"
                >
                  <div
                    class="css-1i4b0eq"
                    height="20"
                    width="20"
                  >
                    <svg
                      id="ellipsis-vertical"
                      viewBox="0 0 20 20"
                      x="0"
                      xml:space="preserve"
                      xmlns="http://www.w3.org/2000/svg"
                      y="0"
                    >
                      <g
                        fill="none"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                      >
                        <circle
                          cx="10"
                          cy="16.994"
                          r="2.006"
                        />
                        <circle
                          cx="10"
                          cy="3"
                          r="2"
                        />
                        <circle
                          cx="10"
                          cy="10"
                          r="2"
                        />
                      </g>
                    </svg>
                  </div>
                </div>
              </button>
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
